set (HEADER_FILES
    GLView/DrawUtil.h
    GLView/glCommon.h
    GLView/Image.h
    GLView/SymbolRegionDrawer.h
    GLView/Textures.h
    GLView/Tile.h
    Graphic/ArcObjectAdapter.h
    Graphic/ArcObjectImp.h
    Graphic/ArrowObjectAdapter.h
    Graphic/ArrowObjectImp.h
    Graphic/BitMaskObjectAdapter.h
    Graphic/BitMaskObjectImp.h
    Graphic/CgmObjectAdapter.h
    Graphic/CgmObjectImp.h
    Graphic/DimensionObjectAdapter.h
    Graphic/DimensionObjectImp.h
    Graphic/DimensionObjectAdapter.h
    Graphic/DimensionObjectImp.h
    Graphic/EastArrowObjectAdapter.h
    Graphic/EastArrowObjectImp.h
    Graphic/EllipseObjectAdapter.h
    Graphic/EllipseObjectImp.h
    Graphic/FileImageObjectAdapter.h
    Graphic/FileImageObjectImp.h
    Graphic/FilledObjectImp.h
    Graphic/FrameLabelObjectAdapter.h
    Graphic/FrameLabelObjectImp.h
    Graphic/GraphicGroupAdapter.h
    Graphic/GraphicObjectFactory.h
    Graphic/GraphicProperty.h
    Graphic/GraphicUtilities.h
    Graphic/ImageObjectImp.h
    Graphic/LatLonInsertObjectAdapter.h
    Graphic/LineObjectAdapter.h
    Graphic/LineObjectImp.h
    Graphic/MeasurementObjectAdapter.h
    Graphic/MeasurementObjectImp.h
    Graphic/MoveObjectImp.h
    Graphic/MultipointObjectAdapter.h
    Graphic/MultipointObjectImp.h
    Graphic/NorthArrowObjectAdapter.h
    Graphic/NorthArrowObjectImp.h
    Graphic/PixelObjectImp.h
    Graphic/PolygonObjectAdapter.h
    Graphic/PolygonObjectImp.h
    Graphic/PolylineObjectAdapter.h
    Graphic/PolylineObjectImp.h
    Graphic/RawImageObjectAdapter.h
    Graphic/RawImageObjectImp.h
    Graphic/RectangleObjectAdapter.h
    Graphic/RectangleObjectImp.h
    Graphic/RoundedRectangleObjectAdapter.h
    Graphic/ScaleBarObjectAdapter.h
    Graphic/ScaleBarObjectImp.h
    Graphic/SymbolManager.h
    Graphic/TextObjectAdapter.h
    Graphic/TrailObjectAdapter.h
    Graphic/TrailObjectImp.h
    Graphic/TriangleObjectAdapter.h
    Graphic/TriangleObjectImp.h
    Graphic/ViewObjectAdapter.h
    Graphic/WidgetImageObjectAdapter.h
    Graphic/WidgetImageObjectImp.h
    Image/GpuProgramDescriptorImp.h
    Image/GpuResourceManager.h
    Image/ImageFilterDescriptorImp.h
    Image/ImageFilterManager.h
    Undo/AoiLayerUndo.h
    Undo/GcpLayerUndo.h
    Undo/GcpListUndo.h
    Undo/GraphicLayerUndo.h
    Undo/LatLonLayerUndo.h
    Undo/LayerUndo.h
    Undo/ProductViewUndo.h
    Undo/PseudocolorLayerUndo.h
    Undo/RasterLayerUndo.h
    Undo/ThresholdLayerUndo.h
    Undo/TiePointLayerUndo.h
    Undo/TiePointListUndo.h
    Undo/ViewUndo.h
    BadValuesDlg.h
    DynamicObjectItemModel.h
    GuiFunctors.h
    OptionsFullScreen.h
    OptionsDockWindow.h
    OptionsLayer.h
    OptionsPropertiesDialog.h
    OptionsToolBar.h
    PropertiesAoiLayer.h
    PropertiesClassification.h
    PropertiesDataDescriptor.h
    PropertiesFileDescriptor.h
    PropertiesGcpLayer.h
    PropertiesHistogramPlot.h
    PropertiesMetadata.h
    PropertiesModuleDescriptor.h
    PropertiesPointCloudView.h
    PropertiesPlotView.h
    PropertiesPlugInDescriptor.h
    PropertiesProductView.h
    PropertiesSpatialDataView.h
    PropertiesTiePointLayer.h
    PropertiesView.h
    PropertiesWavelengths.h
    WizardClipboard.h
    WizardItemPalette.h
    WizardLine.h
    Workspace.h
    Image/GlSlContext.h
    Image/ColorBuffer.h
    Image/FrameBuffer.h
    Image/GlProgram.h
    Image/GlShaderGpuProgram.h
    Image/GlSlContext.h
    Image/GpuImage.h
    Image/GpuProgram.h
    Image/GpuProgramDescriptorAdapter.h
    Image/GpuResourceManager.h
    Image/GpuTile.h
    Image/GrayscaleGpuProgram.h
    Image/ImageBuffer.h
    Image/ImageFilter.h
    Image/ImageFilterDescriptorAdapter.h
    Image/ImageFilterDescriptorImp.h
    Image/ImageFilterManager.h
    Image/ImageLoader.h
    Image/ImagePBO.h
    Image/ImagePBuffer.h
    Image/ImageUtilities.h
    Image/PixelBufferObject.h
    Image/RgbGpuProgram.h
)
set (SOURCE_FILES
    GLView/DrawUtil.cpp
    GLView/Image.cpp
    GLView/PseudocolorClass.cpp
    GLView/Textures.cpp
    GLView/Tile.cpp
    Graphic/ArcObjectImp.cpp
    Graphic/ArrowObjectImp.cpp
    Graphic/BitMaskObjectImp.cpp
    Graphic/CgmObjectImp.cpp
    Graphic/DimensionObjectImp.cpp
    Graphic/DirectionalArrowObjectImp.cpp
    Graphic/EastArrowObjectImp.cpp
    Graphic/EllipseObjectImp.cpp
    Graphic/FileImageObjectImp.cpp
    Graphic/FilledObjectImp.cpp
    Graphic/FrameLabelObjectImp.cpp
    Graphic/GraphicGroupImp.cpp
    Graphic/GraphicObjectFactory.cpp
    Graphic/GraphicObjectImp.cpp
    Graphic/GraphicProperty.cpp
    Graphic/GraphicUtilities.cpp
    Graphic/ImageObjectImp.cpp
    Graphic/LatLonInsertObjectImp.cpp
    Graphic/LineObjectImp.cpp
    Graphic/MeasurementObjectImp.cpp
    Graphic/MoveObjectImp.cpp
    Graphic/MultipointObjectImp.cpp
    Graphic/NorthArrowObjectImp.cpp
    Graphic/PixelObjectImp.cpp
    Graphic/PolygonObjectImp.cpp
    Graphic/PolylineObjectImp.cpp
    Graphic/RawImageObjectImp.cpp
    Graphic/RectangleObjectImp.cpp
    Graphic/ScaleBarObjectImp.cpp
    Graphic/SymbolManager.cpp
    Graphic/TextObjectImp.cpp
    Graphic/TrailObjectImp.cpp
    Graphic/TriangleObjectImp.cpp
    Graphic/ViewObjectImp.cpp
    Graphic/WidgetImageObjectImp.cpp
    Image/ColorBuffer.cpp
    Image/ColormapGpuProgram.cpp
    Image/FrameBuffer.cpp
    Image/GlProgram.cpp
    Image/GlShaderGpuProgram.cpp
    Image/GlSlContext.cpp
    Image/GpuImage.cpp
    Image/GpuProgram.cpp
    Image/GpuProgramDescriptorImp.cpp
    Image/GpuResourceManager.cpp
    Image/GpuTile.cpp
    Image/GrayscaleGpuProgram.cpp
    Image/ImageBuffer.cpp
    Image/ImageFilter.cpp
    Image/ImageFilterDescriptorImp.cpp
    Image/ImageFilterManager.cpp
    Image/ImageLoader.cpp
    Image/ImagePBO.cpp
    Image/ImagePBuffer.cpp
    Image/ImageUtilities.cpp
    Image/PixelBufferObject.cpp
    Image/RgbGpuProgram.cpp
    Undo/AoiLayerUndo.cpp
    Undo/GcpLayerUndo.cpp
    Undo/GcpListUndo.cpp
    Undo/GraphicLayerUndo.cpp
    Undo/LatLonLayerUndo.cpp
    Undo/LayerUndo.cpp
    Undo/ProductViewUndo.cpp
    Undo/PseudocolorLayerUndo.cpp
    Undo/RasterLayerUndo.cpp
    Undo/ThresholdLayerUndo.cpp
    Undo/TiePointLayerUndo.cpp
    Undo/TiePointListUndo.cpp
    Undo/UndoButton.cpp
    Undo/UndoStack.cpp
    Undo/ViewUndo.cpp
    AboutDlg.cpp
    AnimationCycleButton.cpp
    AnnotationToolBar.cpp
    AoiMergeDlg.cpp
    AoiToolBarAdapter.cpp
    AoiToolBarImp.cpp
    ApplicationWindow.cpp
    BackgroundPluginWindow.cpp
    BadValuesDlg.cpp
    BatchEditorDlg.cpp
    BatchExportDlg.cpp
    BrightnessToolBar.cpp
    ChippingWidget.cpp
    ChippingWindow.cpp
    ColormapEditor.cpp
    DataDescriptorWidget.cpp
    DisplayToolBar.cpp
    DynamicObjectItemModel.cpp
    ExportDlg.cpp
    ExportOptionsDlg.cpp
    FileDescriptorWidget.cpp
    FilePlugInDlg.cpp
    FilesetWidget.cpp
    GcpEditorDlg.cpp
    GcpToolBar.cpp
    GetSubsetDialog.cpp
    GraphicObjectTypeGrid.cpp
    ImportDlg.cpp
    ImportOptionsDlg.cpp
    LinkDatasetPage.cpp
    LinkDlg.cpp
    LinkOptionsPage.cpp
    MeasurementToolBar.cpp
    MenuBarImp.cpp
    MessageLogWindow.cpp
    MetadataFilterDlg.cpp
    MetadataWidget.cpp
    MultiLineTextDialog.cpp
    OptionsAnimation.cpp
    OptionsAnnotationLayer.cpp
    OptionsAoiLayer.cpp
    OptionsDlg.cpp
    OptionsDockWindow.cpp
    OptionsFileLocations.cpp
    OptionsFullScreen.cpp
    OptionsGcpLayer.cpp
    OptionsGeneral.cpp
    OptionsGeoreference.cpp
    OptionsLatLonLayer.cpp
    OptionsLayer.cpp
    OptionsMeasurementLayer.cpp
    OptionsOverviewWindow.cpp
    OptionsPseudocolorLayer.cpp
    OptionsPropertiesDialog.cpp
    OptionsRasterLayer.cpp
    OptionsSession.cpp
    OptionsShortcuts.cpp
    OptionsSpatialDataView.cpp
    OptionsStatusBar.cpp
    OptionsSuppressibleMsg.cpp
    OptionsThresholdLayer.cpp
    OptionsTiePointLayer.cpp
    OptionsToolBar.cpp
    OptionsView.cpp
    OverviewWindow.cpp
    PaperSizeDlg.cpp
    PreviewWidget.cpp
    ProgressDlg.cpp
    PropertiesAnnotationLayer.cpp
    PropertiesAoiLayer.cpp
    PropertiesClassification.cpp
    PropertiesDataDescriptor.cpp
    PropertiesDlg.cpp
    PropertiesFileDescriptor.cpp
    PropertiesGcpLayer.cpp
    PropertiesGraphicObject.cpp
    PropertiesGeoreference.cpp
    PropertiesHistogramPlot.cpp
    PropertiesLatLonLayer.cpp
    PropertiesMeasurementLayer.cpp
    PropertiesMeasurementObject.cpp
    PropertiesMetadata.cpp
    PropertiesModuleDescriptor.cpp
    PropertiesPointCloudView.cpp
    PropertiesPlotView.cpp
    PropertiesPlugInDescriptor.cpp
    PropertiesProductView.cpp
    PropertiesPseudocolorLayer.cpp
    PropertiesRasterLayer.cpp
    PropertiesScriptingWindow.cpp
    PropertiesSpatialDataView.cpp
    PropertiesThresholdLayer.cpp
    PropertiesTiePointLayer.cpp
    PropertiesView.cpp
    PropertiesWavelengths.cpp
    ScriptingWidget.cpp
    ScriptingWindow.cpp
    SplashScreen.cpp
    StatusBar.cpp
    SubsetWidget.cpp
    TiePointEditor.cpp
    TiePointTableModel.cpp
    TiePointToolbar.cpp
    WavelengthModel.cpp
    WavelengthsWidget.cpp
    WindowSelectionDlg.cpp
    WizardBuilder.cpp
    WizardClipboard.cpp
    WizardGraphicsItem.cpp
    WizardItemPalette.cpp
    WizardItemProperties.cpp
    WizardLine.cpp
    WizardProperties.cpp
    WizardView.cpp
    WizardWidget.cpp
    Workspace.cpp
    ZoomCustomDlg.cpp
    ZoomPanWidget.cpp
    Image/GlSlContext.cpp
    Image/ColorBuffer.cpp
    Image/FrameBuffer.cpp
    Image/GpuImage.cpp
    Image/GpuProgram.cpp
    Image/GpuProgramDescriptorImp.cpp
    Image/GpuResourceManager.cpp
    Image/GpuTile.cpp
    Image/ImageBuffer.cpp
    Image/ImageFilter.cpp
    Image/ImageFilterDescriptorImp.cpp
    Image/ImageFilterManager.cpp
    Image/ImageLoader.cpp
    Image/ImagePBO.cpp
    Image/ImagePBuffer.cpp
    Image/ImageUtilities.cpp
    Image/PixelBufferObject.cpp
) 
set (MOC_HEADERS
    GLView/PseudocolorClass.h
    Graphic/DirectionalArrowObjectImp.h
    Graphic/GraphicObjectImp.h
    Graphic/GraphicGroupImp.h
    Graphic/LatLonInsertObjectImp.h
    Graphic/TextObjectImp.h
    Graphic/ViewObjectImp.h
    Undo/UndoButton.h
    Undo/UndoStack.h
    AboutDlg.h
    AnimationCycleButton.h
    AnnotationToolBar.h
    AoiMergeDlg.h
    AoiToolBarAdapter.h
    AoiToolBarImp.h
    ApplicationWindow.h
    BackgroundPluginWindow.h
    BadValuesDlg.h
    BatchEditorDlg.h
    BatchExportDlg.h
    BrightnessToolBar.h
    ChippingWidget.h
    ChippingWindow.h
    ColormapEditor.h
    DataDescriptorWidget.h
    DisplayToolBar.h
    ExportDlg.h
    ExportOptionsDlg.h
    FileDescriptorWidget.h
    FilePlugInDlg.h
    FilesetWidget.h
    GcpEditorDlg.h
    GcpToolBar.h
    GetSubsetDialog.h
    GraphicObjectTypeGrid.h
    ImportDlg.h
    ImportOptionsDlg.h
    LinkDatasetPage.h
    LinkDlg.h
    LinkOptionsPage.h
    MeasurementToolBar.h
    MenuBarImp.h
    MessageLogWindow.h
    MetadataFilterDlg.h
    MetadataWidget.h
    MultiLineTextDialog.h
    OptionsAnimation.h
    OptionsAnnotationLayer.h
    OptionsAoiLayer.h
    OptionsDlg.h
    OptionsDockWindow.h
    OptionsFileLocations.h
    OptionsFullScreen.h
    OptionsGcpLayer.h
    OptionsGeneral.h
    OptionsGeoreference.h
    OptionsLatLonLayer.h
    OptionsLayer.h
    OptionsMeasurementLayer.h
    OptionsOverviewWindow.h
    OptionsPropertiesDialog.h
    OptionsPseudocolorLayer.h
    OptionsRasterLayer.h
    OptionsSession.h
    OptionsShortcuts.h
    OptionsSpatialDataView.h
    OptionsStatusBar.h
    OptionsSuppressibleMsg.h
    OptionsThresholdLayer.h
    OptionsTiePointLayer.h
    OptionsToolBar.h
    OptionsView.h
    OverviewWindow.h
    PaperSizeDlg.h
    PreviewWidget.h
    ProgressDlg.h
    PropertiesAnnotationLayer.h
    PropertiesDlg.h
    PropertiesGeoreference.h
    PropertiesGraphicObject.h
    PropertiesLatLonLayer.h
    PropertiesMeasurementLayer.h
    PropertiesPlotView.h
    PropertiesPointCloudView.h
    PropertiesMeasurementObject.h
    PropertiesPseudocolorLayer.h
    PropertiesRasterLayer.h
    PropertiesScriptingWindow.h
    PropertiesThresholdLayer.h
    ScriptingWidget.h
    ScriptingWindow.h
    SplashScreen.h
    StatusBar.h
    SubsetWidget.h
    TiePointEditor.h
    TiePointTableModel.h
    TiePointToolbar.h
    WavelengthModel.h
    WavelengthsWidget.h
    WindowSelectionDlg.h
    WizardBuilder.h
    WizardGraphicsItem.h
    WizardItemProperties.h
    WizardProperties.h
    WizardView.h
    WizardWidget.h
    Workspace.h
    ZoomCustomDlg.h
    ZoomPanWidget.h
)
set(QRC_FILES
    res/Application.qrc	
)
if(ONE_OPTICKS_LIB)
    set_property(DIRECTORY PROPERTY ALL_SOURCES ${SOURCE_FILES} ${HEADER_FILES})
    set_property(DIRECTORY PROPERTY MOC_HEADERS ${MOC_HEADERS})
    set_property(DIRECTORY PROPERTY QRC_FILES ${QRC_FILES})
else()
    qt5_wrap_cpp(MOC_OUTFILES ${MOC_HEADERS})
    qt5_add_resources(RCC_OUTFILES ${QRC_FILES})
    source_group(resources FILES ${QRC_FILES} ${RCC_OUTFILES})
    source_group(moc FILES ${MOC_OUTFILES})
    source_group(GLView REGULAR_EXPRESSION GLView.*)
    source_group(Graphic REGULAR_EXPRESSION Graphic.*)
    source_group(Image REGULAR_EXPRESSION Image.*) 
    source_group(Undo REGULAR_EXPRESSION Undo.*) 
    add_library(Gui STATIC ${SOURCE_FILES} ${MOC_HEADERS} ${MOC_OUTFILES} ${HEADER_FILES} ${RCC_OUTFILES})
endif()

