set (HEADER_FILES
    AnnotationElementAdapter.h
    AnnotationElementImp.h
    AnyAdapter.h
    AnyImp.h
    AoiElementAdapter.h
    AoiElementImp.h
    BitMaskImp.h
    ClassificationAdapter.h
    ClassificationImp.h
    ConvertToBilPage.h
    ConvertToBilPager.h
    ConvertToBipPage.h
    ConvertToBipPager.h
    ConvertToBsqPage.h
    ConvertToBsqPager.h
    DataDescriptorAdapter.h
    DataDescriptorImp.h
    DataElementAdapter.h
    DataElementGroupAdapter.h
    DataElementGroupImp.h
    DataElementImp.h
    DataRequestImp.h
    EndianSwapPage.h
    FileDescriptorAdapter.h
    FileDescriptorImp.h
    GcpListAdapter.h
    GcpListImp.h
    GraphicElementAdapter.h
    GraphicElementImp.h
    InMemoryPage.h
    InMemoryPager.h
    LibrarySignatureAdapter.h
    LibrarySignatureImp.h
    MemoryMappedMatrix.h
    MemoryMappedMatrixView.h
    MemoryMappedPage.h
    MemoryMappedPager.h
    ModelServicesImp.h
    RasterDataDescriptorAdapter.h
    RasterDataDescriptorImp.h
    RasterElementAdapter.h
    RasterElementImp.h
    RasterFileDescriptorAdapter.h
    RasterFileDescriptorImp.h
    SignatureAdapter.h
    SignatureDataDescriptorAdapter.h
    SignatureDataDescriptorImp.h
    SignatureFileDescriptorAdapter.h
    SignatureFileDescriptorImp.h
    SignatureImp.h
    SignatureLibraryAdapter.h
    SignatureLibraryImp.h
    SignatureSetAdapter.h
    SignatureSetImp.h
    StatisticsImp.h
    TiePointListAdapter.h
    TiePointListImp.h
    UnitsAdapter.h
    UnitsImp.h
) 
set (SOURCE_FILES
    AnnotationElementAdapter.cpp
    AnnotationElementImp.cpp
    AnyAdapter.cpp
    AnyImp.cpp
    AoiElementAdapter.cpp
    AoiElementImp.cpp
    BitMaskImp.cpp
    ClassificationAdapter.cpp
    ClassificationImp.cpp
    ConvertToBilPage.cpp
    ConvertToBilPager.cpp
    ConvertToBipPage.cpp
    ConvertToBipPager.cpp
    ConvertToBsqPage.cpp
    ConvertToBsqPager.cpp
    DataDescriptorAdapter.cpp
    DataDescriptorImp.cpp
    DataElementAdapter.cpp
    DataElementGroupAdapter.cpp
    DataElementGroupImp.cpp
    DataElementImp.cpp
    DataRequestImp.cpp
    EndianSwapPage.cpp
    FileDescriptorAdapter.cpp
    FileDescriptorImp.cpp
    GcpListAdapter.cpp
    GcpListImp.cpp
    GraphicElementAdapter.cpp
    GraphicElementImp.cpp
    InMemoryPage.cpp
    InMemoryPager.cpp
    LibrarySignatureAdapter.cpp
    LibrarySignatureImp.cpp
    MemoryMappedMatrix.cpp
    MemoryMappedMatrixView.cpp
    MemoryMappedPage.cpp
    MemoryMappedPager.cpp
    ModelServicesImp.cpp
    RasterDataDescriptorAdapter.cpp
    RasterDataDescriptorImp.cpp
    RasterElementAdapter.cpp
    RasterElementImp.cpp
    RasterFileDescriptorAdapter.cpp
    RasterFileDescriptorImp.cpp
    SignatureAdapter.cpp
    SignatureDataDescriptorAdapter.cpp
    SignatureDataDescriptorImp.cpp
    SignatureFileDescriptorAdapter.cpp
    SignatureFileDescriptorImp.cpp
    SignatureImp.cpp
    SignatureLibraryAdapter.cpp
    SignatureLibraryImp.cpp
    SignatureSetAdapter.cpp
    SignatureSetImp.cpp
    StatisticsImp.cpp
    TiePointListAdapter.cpp
    TiePointListImp.cpp
    UnitsAdapter.cpp
    UnitsImp.cpp
) 
if(ONE_OPTICKS_LIB)
    set_property(DIRECTORY PROPERTY ALL_SOURCES ${SOURCE_FILES} ${HEADER_FILES})
else()
    add_library(Model STATIC ${SOURCE_FILES} ${HEADER_FILES})
endif()
