set (HEADER_FILES
   Interfaces/DataVariant.h
   Interfaces/AlgorithmPattern.h
   Interfaces/AnimationFrameSubsetWidget.h
   Interfaces/AppAssert.h
   Interfaces/AppVerify.h
   Interfaces/AttachmentPtr.h
   Interfaces/BitMaskIterator.h
   Interfaces/CachedPage.h
   Interfaces/CachedPager.h
   Interfaces/ColorMap.h
   Interfaces/DataVariant.h
   Interfaces/DataVariantAnyData.h
   Interfaces/DataVariantValidator.h
   Interfaces/DrawObject.h
   Interfaces/Endian.h
   Interfaces/FileResource.h
   Interfaces/GeoAlgorithms.h
   Interfaces/GeocoordTypeComboBox.h
   Interfaces/GeoPoint.h
   Interfaces/GlContextSave.h
   Interfaces/GlTextureResource.h
   Interfaces/InterpolationComboBox.h
   Interfaces/InterpreterUtilities.h
   Interfaces/IntValidator.h
   Interfaces/Jpeg2000Utilities.h
   Interfaces/MatrixFunctions.h
   Interfaces/MessageLogResource.h
   Interfaces/ModifierWidget.h
   Interfaces/MultiThreadedAlgorithm.h
   Interfaces/ObjectResource.h
   Interfaces/OptionQWidgetWrapper.h
   Interfaces/PageCache.h
   Interfaces/PlugInResource.h
   Interfaces/ProgressResource.h
   Interfaces/ProgressTracker.h
   Interfaces/PropertiesQWidgetWrapper.h
   Interfaces/RasterUtilities.h
   Interfaces/Resource.h
   Interfaces/SafePtr.h
   Interfaces/Service.h
   Interfaces/SessionResource.h
   Interfaces/SignalBlocker.h
   Interfaces/StringUtilities.h
   Interfaces/StringUtilitiesMacros.h
   Interfaces/SubjectAdapter.h
   Interfaces/SubjectImp.h
   Interfaces/switchOnEncoding.h
   Interfaces/TestUtilities.h
   Interfaces/TimeUtilities.h
   Interfaces/TypeConverter.h
   Interfaces/Undo.h
   Interfaces/XercesIncludes.h
   Interfaces/xmlbase.h
   Interfaces/xmlreader.h
   Interfaces/xmlwriter.h
   pthreads-wrapper/bmutex.h
   pthreads-wrapper/bthread.h
   pthreads-wrapper/bthread_signal.h
   pthreads-wrapper/DMutex.h
   pthreads-wrapper/mutex.h
   pthreads-wrapper/thread.h
   pthreads-wrapper/thread_signal.h
   AppVersion.h
   ArcRegionComboBox.h
   ColorGrid.h
   ColorMenu.h
   ComplexComponentComboBox.h
   DataVariantEditor.h
   DmsFormatTypeComboBox.h
   FillStyleComboBox.h
   FilterWidget.h
   FloatingLabel.h
   GcpSymbolGrid.h
   GeoConversions.h
   GeoreferenceUtilities.h
   GeoreferenceWidget.h
   GraphicArcWidget.h
   GraphicFillWidget.h
   GraphicImageWidget.h
   GraphicLineWidget.h
   GraphicMeasurementWidget.h
   GraphicObjectWidget.h
   GraphicScaleWidget.h
   GraphicSymbolWidget.h
   GraphicTriangleWidget.h
   GraphicUnitsWidget.h
   GraphicViewWidget.h
   ImageResolutionWidget.h
   InfoBar.h
   LatLonStyleComboBox.h
   LineStyleComboBox.h
   LineWidthComboBox.h
   MathUtil.h
   MgrsDatum.h
   MgrsEngine.h
   Mgrs.h
   MipMappedTextures.h
   NameTypeValueDlg.h
   PanLimitTypeComboBox.h
   PassAreaComboBox.h
   PixmapGridButton.h
   PixmapGrid.h
   PlugInSelectDlg.h
   PrintPixmap.h
   RasterElementUpdater.h
   Rdf.h
   RegionUnitsComboBox.h
   ResolutionWidget.h
   SearchDlg.h
   SelectionGrid.h
   SignatureFilterDlg.h
   StretchTypeComboBox.h
   SubjectImpPrivate.h
   SymbolTypeGrid.h
   SystemServices.h
   SystemServicesImp.h
   )
set (SOURCE_FILES
   pthreads-wrapper/bmutex.cpp
   pthreads-wrapper/bthread.cpp
   pthreads-wrapper/bthread_signal.cpp
   AlgorithmDialog.cpp
   AlgorithmPattern.cpp
   AnimationFrameSpinBox.cpp
   AnimationFrameSubsetWidget.cpp
   AppAssert.cpp
   AppVerify.cpp
   ArcRegionComboBox.cpp
   BitMaskIterator.cpp
   CachedPage.cpp
   CachedPager.cpp
   ClassificationWidget.cpp
   ColorGrid.cpp
   ColorMap.cpp
   ColorMenu.cpp
   ComplexComponentComboBox.cpp
   CustomColorButton.cpp
   CustomTreeWidget.cpp
   DataVariant.cpp
   DataVariantEditor.cpp
   DmsFormatTypeComboBox.cpp
   DrawObject.cpp
   ElidedButton.cpp
   ElidedLabel.cpp
   Endian.cpp
   FileBrowser.cpp
   FillStyleComboBox.cpp
   FilterWidget.cpp
   FloatingLabel.cpp
   FontSizeComboBox.cpp
   GcpSymbolGrid.cpp
   GeoAlgorithms.cpp
   GeocoordTypeComboBox.cpp
   GeoPoint.cpp
   GeoreferenceUtilities.cpp
   GeoreferenceWidget.cpp
   GlContextSave.cpp
   GraphicArcWidget.cpp
   GraphicFillWidget.cpp
   GraphicImageWidget.cpp
   GraphicLineWidget.cpp
   GraphicMeasurementWidget.cpp
   GraphicObjectWidget.cpp
   GraphicScaleWidget.cpp
   GraphicSymbolWidget.cpp
   GraphicTextWidget.cpp
   GraphicTriangleWidget.cpp
   GraphicUnitsWidget.cpp
   GraphicViewWidget.cpp
   ImageResolutionWidget.cpp
   InfoBar.cpp
   InterpolationComboBox.cpp
   InterpreterUtilities.cpp
   IntValidator.cpp
   Jpeg2000Utilities.cpp
   LabeledSection.cpp
   LabeledSectionGroup.cpp
   LatLonLineEdit.cpp
   LatLonStyleComboBox.cpp
   LineStyleComboBox.cpp
   LineWidthComboBox.cpp
   MatrixFunctions.cpp
   Mgrs.cpp
   MgrsDatum.cpp
   MgrsEngine.cpp
   MipMappedTextures.cpp
   MultiThreadedAlgorithm.cpp
   MutuallyExclusiveListWidget.cpp
   NameTypeValueDlg.cpp
   PageCache.cpp
   PanLimitTypeComboBox.cpp
   PassAreaComboBox.cpp
   PixmapGridButton.cpp
   PixmapGrid.cpp
   PlugInSelectDlg.cpp
   PrintPixmap.cpp
   ProgressTracker.cpp
   RasterElementUpdater.cpp
   RasterUtilities.cpp
   Rdf.cpp
   RegionUnitsComboBox.cpp
   ResolutionWidget.cpp
   SearchDlg.cpp
   SelectionGrid.cpp
   Service.cpp
   SignatureFilterDlg.cpp
   SignaturePropertiesDlg.cpp
   SignatureSelector.cpp
   StretchTypeComboBox.cpp
   StringUtilities.cpp
   SubjectAdapter.cpp
   SubjectImp.cpp
   SubjectImpPrivate.cpp
   SuppressibleMsgDlg.cpp
   SymbolTypeGrid.cpp
   SystemServicesImp.cpp
   TestUtilities.cpp
   TimeUtilities.cpp
   TypeConverter.cpp
   UndoAction.cpp
   Undo.cpp
   WavelengthUnitsComboBox.cpp
   xmlbase.cpp
   xmlreader.cpp
   XmlUtilities.cpp
   xmlwriter.cpp
   )
set (MOC_HEADERS
   Interfaces/AlgorithmDialog.h
   Interfaces/AnimationFrameSpinBox.h
   Interfaces/AnimationFrameSubsetWidget.h
   Interfaces/ClassificationWidget.h
   Interfaces/CustomColorButton.h
   Interfaces/CustomTreeWidget.h
   Interfaces/ElidedButton.h
   Interfaces/ElidedLabel.h
   Interfaces/FileBrowser.h
   Interfaces/FontSizeComboBox.h
   Interfaces/GeocoordTypeComboBox.h
   Interfaces/GraphicTextWidget.h
   Interfaces/InterpolationComboBox.h
   Interfaces/LabeledSection.h
   Interfaces/LabeledSectionGroup.h
   Interfaces/LatLonLineEdit.h
   Interfaces/Modifier.h
   Interfaces/ModifierWidget.h
   Interfaces/MutuallyExclusiveListWidget.h
   Interfaces/SignaturePropertiesDlg.h
   Interfaces/SignatureSelector.h
   Interfaces/SuppressibleMsgDlg.h
   Interfaces/UndoAction.h
   Interfaces/WavelengthUnitsComboBox.h
   Interfaces/XmlUtilities.h
   AppVersion.h
   ArcRegionComboBox.h
   ColorGrid.h
   ColorMenu.h
   ComplexComponentComboBox.h
   DataVariantEditor.h
   DmsFormatTypeComboBox.h
   FillStyleComboBox.h
   FilterWidget.h
   FloatingLabel.h
   GcpSymbolGrid.h
   GeoConversions.h
   GeoreferenceUtilities.h
   GeoreferenceWidget.h
   GraphicArcWidget.h
   GraphicFillWidget.h
   GraphicImageWidget.h
   GraphicLineWidget.h
   GraphicMeasurementWidget.h
   GraphicObjectWidget.h
   GraphicScaleWidget.h
   GraphicSymbolWidget.h
   GraphicTriangleWidget.h
   GraphicUnitsWidget.h
   GraphicViewWidget.h
   ImageResolutionWidget.h
   InfoBar.h
   LatLonStyleComboBox.h
   LineStyleComboBox.h
   LineWidthComboBox.h
   MathUtil.h
   MgrsDatum.h
   MgrsEngine.h
   Mgrs.h
   MipMappedTextures.h
   NameTypeValueDlg.h
   PanLimitTypeComboBox.h
   PassAreaComboBox.h
   PixmapGridButton.h
   PixmapGrid.h
   PlugInSelectDlg.h
   PrintPixmap.h
   RasterElementUpdater.h
   Rdf.h
   RegionUnitsComboBox.h
   ResolutionWidget.h
   SearchDlg.h
   SelectionGrid.h
   SignatureFilterDlg.h
   StretchTypeComboBox.h
   SubjectImpPrivate.h
   SymbolTypeGrid.h
   SystemServices.h
   SystemServicesImp.h
   )
if(MSVC)
    set_source_files_properties(StringUtilities.cpp PROPERTIES COMPILE_FLAGS "/bigobj")
    set_source_files_properties(MatrixFunctions.cpp PROPERTIES COMPILE_FLAGS "/bigobj")
endif()
if(WIN32)
    find_package(MessageCompiler REQUIRED)
    add_custom_command(
        OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/EventMessages.h ${CMAKE_CURRENT_BINARY_DIR}/EventMessages.rc
        COMMAND ${MessageCompiler_EXECUTABLE} -h ${CMAKE_CURRENT_BINARY_DIR} -r ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/EventMessages.mc
        DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/EventMessages.mc
    )
    include_directories(${CMAKE_CURRENT_BINARY_DIR})
    list(APPEND HEADER_FILES ${CMAKE_CURRENT_BINARY_DIR}/EventMessages.h)
    set_property(SOURCE ${CMAKE_CURRENT_BINARY_DIR}/EventMessages.h PROPERTY SKIP_AUTOGEN ON)
endif()
include_directories(${Opticks_INCLUDE_DIRS})
include_directories(${Boost_INCLUDE_DIRS})
add_definitions(-DAPPLICATION_XERCES)
include_directories(${Xerces_INCLUDE_DIRS})
include_directories(${Raptor_INCLUDE_DIRS})
include_directories(${Glew_INCLUDE_DIRS})
include_directories(${Ossim_INCLUDE_DIRS})
include_directories(
    ${Opticks_SOURCE_DIR}/Desktop
    ${Opticks_SOURCE_DIR}/Desktop/Plot
    ${Opticks_SOURCE_DIR}/Gui/GLView
    ${Opticks_SOURCE_DIR}/Utilities
)
qt5_wrap_cpp(MOC_OUTFILES ${MOC_HEADERS})
source_group(moc FILES ${MOC_OUTFILES})
add_library(PlugInUtilities STATIC ${SOURCE_FILES} ${MOC_HEADERS} ${MOC_OUTFILES} ${HEADER_FILES})
set_target_properties(PlugInUtilities PROPERTIES OUTPUT_NAME opticks-pluginutilities)
if(NOT MSVC)
    #these libraries should be fixed so that they are not circular
    target_link_libraries(PlugInUtilities PlugInLib)
endif()

target_link_libraries(PlugInUtilities ${Ossim_LIBRARIES})

install(TARGETS PlugInUtilities DESTINATION lib)
